# Informatica_Desafios

./: Abrir_archivos.cpp  Documentacion.ipynb  Informe_19_septiembre.ipynb  README.md  Texto de comprimido.txt  Texto descomprimido.txt  prueba.ipynb
Unir_ccodigos/: CMakeLists.txt  Texto comprimido.txt  Texto descomprimido.txt  main  main.cpp
